added main block

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </nav>
         </header>
         
+        <main>
         <h2>Welcome</h2>
 
         <p>
@@ -78,6 +79,8 @@
                 alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"
             />
         </a>
+
+        </main>
 
         <p>
             This fake website example is CC0 — any part of this code may be
