--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </header>
         
         <main>
+        <article>
         <h2>Welcome</h2>
 
         <p>
@@ -52,6 +53,7 @@
             So don't waste time! Get what you need, then turn off that computer
             and get out into the great outdoors!
         </p>
+        </article>
 
         <h2>Favorite photos</h2>
 
