--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         </p>
         </article>
 
+        <aside>
         <h2>Favorite photos</h2>
 
         <a href="images/favorite-1.jpg">
@@ -81,6 +82,7 @@
                 alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"
             />
         </a>
+        </aside>
 
         </main>
 
