--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
         </main>
 
+        <footer>
         <p>
             This fake website example is CC0 — any part of this code may be
             reused in any way you wish. Original example written by Chris Mills,
@@ -98,5 +99,6 @@
             </a>
             by Lorc.
         </p>
+        </footer>
     </body>
 </html>
